--- a/notebook-arch/i3status/config
+++ b/notebook-arch/i3status/config
@@ -20,8 +20,8 @@ order += "tztime local"
 
 
 wireless _first_ {
-        format_up = "%ip %essid %quality  "
-        format_down = "󰤯 "
+        format_up = "%ip %essid %quality"
+        format_down = "No connection"
 }
 
 ethernet _first_ {
@@ -31,11 +31,6 @@ ethernet _first_ {
 
 battery all {
         format = "%status %percentage %remaining"
-		format_down = "  No Battery"
-        status_chr = "  Charging"
-        status_bat = "  Battery"
-        status_unk = "  Unknown"
-        status_full = "  Charged"
 }
 
 disk "/" {
