--- a/i3blocks/config
+++ b/i3blocks/config
@@ -3,7 +3,7 @@
 command=scripts/memory
 label=MEM 
 interval=30
-color=#F09020
+color=#fab387
 
 
 # Guess the weather hourly
@@ -31,13 +31,13 @@ LABEL=CPU
 [ip]
 command=hostname -i | awk '{ print "IP:" $1 }'
 interval=once
-color=#91E78B
+color=#a6e3a1
 
 [kbdd_layout]
 label= 
 command=scripts/kbdd_layout
 interval=persist
-color=#10F0F0
+color=#f5c2e7
 
 
 # Calendar
