--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,41 +1,81 @@
 colors:
-  primary:
-    background: '0x000000'
-    foreground: '0xF8F8F2'
+    primary:
+        background: "#1E1E2E" # base
+        foreground: "#CDD6F4" # text
+        # Bright and dim foreground colors
+        dim_foreground: "#CDD6F4" # text
+        bright_foreground: "#CDD6F4" # text
 
-  cursor:
-    text: '0x000000'
-    cursor: '0xFFFFFF'
+    # Cursor colors
+    cursor:
+        text: "#1E1E2E" # base
+        cursor: "#F5E0DC" # rosewater
+    vi_mode_cursor:
+        text: "#1E1E2E" # base
+        cursor: "#B4BEFE" # lavender
 
-  normal:
-    black:   '0x272822'
-    red:     '0xF92672'
-    green:   '0xA6E22E'
-    yellow:  '0xF4BF75'
-    blue:    '0x66D9EF'
-    magenta: '0xAE81FF'
-    cyan:    '0xA1EFE4'
-    white:   '0xF8F8F2'
+    # Search colors
+    search:
+        matches:
+            foreground: "#1E1E2E" # base
+            background: "#A6ADC8" # subtext0
+        focused_match:
+            foreground: "#1E1E2E" # base
+            background: "#A6E3A1" # green
+        footer_bar:
+            foreground: "#1E1E2E" # base
+            background: "#A6ADC8" # subtext0
 
-  bright:
-    black:   '0x74715D'
-    red:     '0xF92672'
-    green:   '0xA6E22E'
-    yellow:  '0xF4BF75'
-    blue:    '0x66D9EF'
-    magenta: '0xAE81FF'
-    cyan:    '0xA1EFE4'
-    white:   '0xF9F8F5'
+    # Keyboard regex hints
+    hints:
+        start:
+            foreground: "#1E1E2E" # base
+            background: "#F9E2AF" # yellow
+        end:
+            foreground: "#1E1E2E" # base
+            background: "#A6ADC8" # subtext0
 
-  dim:
-    black:   '0x1B1D1E'
-    red:     '0xFB0120'
-    green:   '0xA6E22E'
-    yellow:  '0xFABD2F'
-    blue:    '0x83AFE5'
-    magenta: '0xEC6A88'
-    cyan:    '0x6EC4DB'
-    white:   '0xFFFFFF'
+    # Selection colors
+    selection:
+        text: "#1E1E2E" # base
+        background: "#F5E0DC" # rosewater
+
+    # Normal colors
+    normal:
+        black: "#45475A" # surface1
+        red: "#F38BA8" # red
+        green: "#A6E3A1" # green
+        yellow: "#F9E2AF" # yellow
+        blue: "#89B4FA" # blue
+        magenta: "#F5C2E7" # pink
+        cyan: "#94E2D5" # teal
+        white: "#BAC2DE" # subtext1
+
+    # Bright colors
+    bright:
+        black: "#585B70" # surface2
+        red: "#F38BA8" # red
+        green: "#A6E3A1" # green
+        yellow: "#F9E2AF" # yellow
+        blue: "#89B4FA" # blue
+        magenta: "#F5C2E7" # pink
+        cyan: "#94E2D5" # teal
+        white: "#A6ADC8" # subtext0
+
+    # Dim colors
+    dim:
+        black: "#45475A" # surface1
+        red: "#F38BA8" # red
+        green: "#A6E3A1" # green
+        yellow: "#F9E2AF" # yellow
+        blue: "#89B4FA" # blue
+        magenta: "#F5C2E7" # pink
+        cyan: "#94E2D5" # teal
+        white: "#BAC2DE" # subtext1
+
+    indexed_colors:
+        - { index: 16, color: "#FAB387" }
+        - { index: 17, color: "#F5E0DC" }
 
 font:
   normal:
@@ -50,5 +90,4 @@ font:
     family: Terminus 
     syle: italic
 
-  size: 12
-
+  size: 9
